--- a/index.html
+++ b/index.html
@@ -28,22 +28,25 @@
    
     <section class="seccionprincipal">
         <div class="izquierdaUno">
-            <h1>Product page</h1>
-            <p>We built this template to help you create modern and beautifull marketing page</p>
+            <h1>Product <br> page</h1>
+            <p class="parrafoPrimero">We built this template to help you create modern and beautifull marketing page</p>
             <div class="botones">
                 <button class="botonUno">Download it now</button>
                 <button class="botonfeature">Features</button>
             </div>
         </div>
-        <div class="derechaUno">
-            <img src="imagenes/phone.png" alt="celular">
+        <div class="fondoUno">
+            <div class="derechaUno">
+            <img  src="imagenes/phone.png" alt="celular">
         </div>
+        </div>
+    
     </section> 
     
     <!-- SECCION SEGUNDA -->
     <section class="funcionalidad">
         <div class="tituloSegundo">
-            <h2>funtionnalites</h2>
+            <h2>fonctionnalites</h2>
         </div>
         <div class="imagensegunda">
             <img src="imagenes/laptop.png" alt="laptop">
