--- a/index.html
+++ b/index.html
@@ -48,18 +48,20 @@
         <div class="tituloSegundo">
             <h2>fonctionnalites</h2>
         </div>
-        <div class="imagensegunda">
-            <img src="imagenes/laptop.png" alt="laptop">
-        </div>
-        <div class="derechaDos">
-            <h3>Alpha Screenshot</h3>
-            <p>This is a placeholder text. Replace it with your aweone call to action text. develop stunning product website easity with this template</p>
-            <h4>- Marketing Page</h4>
-            <ul>
-                <li>Based on bootstrap 4</li>
-                <li>Moderm and creative</li>
-                <li>Optimized for mobile devices</li>
-            </ul>
+        <div class="todosegundo">
+            <div class="imagensegunda">
+                <img src="imagenes/laptop.png" alt="laptop">
+            </div>
+            <div class="derechaDos">
+                <h3 class="derechatitulo">Alpha Screenshot</h3>
+                <p>This is a placeholder text. Replace it with your aweone call to action text. develop stunning product website easity with this template</p>
+                <h4>- Marketing Page</h4>
+                <ul class="lista">
+                    <li>Based on bootstrap 4</li>
+                    <li>Moderm and creative</li>
+                    <li>Optimized for mobile devices</li>
+                </ul>
+            </div>
         </div>
     </section>
     
@@ -67,13 +69,14 @@
      <section class="precio">
         <div>
             <h2 >Plans & Pricing</h2>
-            <p class="decripcionDePrecio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis alias ea eveniet sunt perferendis, minus sint dolor voluptates rerum doloremque porro, eligendi expedita fugiat quam, aperiam ut magnam at libero.</p>
+            <p class="decripcionDePrecio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis alias ea eveniet sunt perferendis, minus sint dolor voluptates rerum doloremque porro, eligendi expedita fugiat quam, aperiam ut magnam at libero Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, sunt illo aut aliquid voluptate, eius repellat facere vero eveniet, soluta suscipit porro minima accusantium repellendus et quasi cumque exercitationem. Voluptate..</p>
         </div>
         <div class="contenedortarjectas">
             <div class="tarjecta1">
                 <img src="imagenes/hoja.png" alt="hoja rosada">
-                <h3>$0 <span>free</span></h3>
-                <ul class="listatarjecta">
+                <h4 class="titulotarjeta">Lite</h4>
+                <h3>$0 <sup>free</sup></h3>
+                <ul class="listatarjeta">
                     <li>★ Full Components</li>
                     <li>✔ Future Updates</li>
                     <li>✔ Documentation</li>
@@ -81,25 +84,31 @@
                     <li>✖ Cool Option</li>
                 </ul>
                 <p>Nulla vel metus scelerisque ante sollicituden. cra purus odio, vestibulum in vulputate at, tempus viverra turpis</p>
-                <button class="bottontarjecta1">Subscribe now</button>
+                <div class="grisbotton">
+                <button class="bottontarjeta1">Subscribe now</button>
+                </div>
             </div>
-            <div class="tarjecta2">
+            <div class="tarjeta2">
                 <img src="imagenes/nube.png" alt="nube">
-                <h3>$24 <span>per mounth</span></h3>
-                <ul class="listatarjecta">
-                    <li>★ Full Components</li>
+                <h4>Standard</h4>           
+                <h3>$24 <sup>per mounth</sup></h3>
+                <ul class="listatarjeta">
+                    <li>★  Full Components</li>
                     <li>✔ Future Updates</li>
                     <li>✔ Documentation</li>
                     <li>✔ Customer Support</li>
                     <li>✖ Cool Option</li>
                 </ul>
                 <p>Nulla vel metus scelerisque ante sollicituden. cra purus odio, vestibulum in vulputate at, tempus viverra turpis</p>
-                <button class="bottontarjecta2">Subscribe now</button>
+                <div class="grisbotton">
+                <button class="bottontarjeta2">Subscribe now</button>
+                </div>
             </div>
-            <div class="tarjecta3">
+            <div class="tarjeta3">
                 <img src="imagenes/maletin.png" alt="maletin">
-                <h3>$400 <span>per user/year</span></h3>
-                <ul class="listatarjecta">
+                <h4>Ultimate</h4>
+                <h3>$400 <sup>per user/year</sup></h3>
+                <ul class="listatarjeta">
                     <li>★ Full Components</li>
                     <li>✔ Future Updates</li>
                     <li>✔ Documentation</li>
@@ -107,7 +116,9 @@
                     <li>✖ Cool Option</li>
                 </ul>
                 <p>Nulla vel metus scelerisque ante sollicituden. cra purus odio, vestibulum in vulputate at, tempus viverra turpis</p>
-                <button class="bottontarjecta2">Subscribe now</button>
+                <div class="grisbotton">
+                <button class="bottontarjeta2">Subscribe now</button>
+                </div>
             </div>
         </div>
      </section>
