--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@
      </section>
 
      <footer>
-        <p>&copy; Website made by MIVFX - contact@address.com</p>
+        <p>&copy; Website made by <span class="rosado">MIVFX</span> - contact@address.com</p>
         <div class="redes-sociales">
-            <a href="#" aria-label="Facebook"><i class="facebook-f"></i></a>
-            <a href="#" aria-label="Twitter"><i class="twitter"></i></a>
-            <a href="#" aria-label="LinkedIn"><i class="linkedin-in"></i></a>
-            <a href="#" aria-label="Instagram"><i class="instagram"></i></a>
+            <img src="imagenes/Facebook.png" alt="Facebook">
+            <img src="imagenes/Twitter copy.png" alt="Twitter">
+            <img src="imagenes/linked.png" alt="linkedin" class="img4">
+            <img src="imagenes/Instagram.png" alt="instagram">
+           
         </div>
      </footer>
 </body>
